# smart-english

./: .gitignore  IMPLEMENTATION_CHECKLIST.md  MODIFICATION_PLAN.md  PROJECT.md  PROJECT_OVERVIEW.md  README.md  REDESIGN_PROPOSAL.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4df78ac76311_add_is_admin_and_new_models.py  5cf2aaa16a59_add_question_analyses_table.py  84da144db47a_add_question_eye_json_to_question_.py  9d2c7af0b4f1_add_cognitive_tables.py  a3701f8b2c45_v3_reading_analyses_table.py  b4802f9c3d67_v4_behavior_tracking_and_knowledge_base.py  c5f1a2b3d4e6_add_cognitive_feedback_records_table.py  d2506e927182_v2_gaze_path_and_human_annotations.py  d7e8f9a0b1c2_add_subject_to_cognitive_knowledge_base.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: security.py
backend/app/models/: arena.py  behavior.py  clinic.py  cognitive.py  error_notebook.py  exam.py  gamification.py  grammar.py  knowledge.py  learning.py  learning_time.py  notification.py  onboarding.py  quest.py  question.py  question_analysis.py  reading.py  reading_analysis.py  screenshot.py  story.py  textbook.py  user.py  vocabulary.py  writing.py
backend/app/routers/: admin.py  arena.py  auth.py  behavior.py  chat.py  clinic.py  cognitive.py  dashboard.py  error_notebook.py  (+17 more)
backend/scripts/: create_all_tables.py  create_gamification_tables.py  seed_cognitive_demo.py  seed_exam_knowledge_points.py  seed_exam_questions.py  seed_knowledge_graph.py  seed_quests.py  seed_story_templates.py
(+250 files in other folders)
